[tool.poetry]
name = "offline_imoea_framework"
version = "0.1.0"
description = ""
authors = ["Atanu"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.3"
matplotlib = "^3.4.1"
plotly = "^4.14.3"
sklearn = "^0.0"
scipy = "^1.6.2"
pygmo = "^2.16.1"
optproblems = "^1.3"
tqdm = "^4.59.0"
diversipy = "^0.8"
pyDOE = "^0.3.8"
joblib = "^1.0.1"
jupyter = "^1.0.0"
statsmodels = "^0.12.2"
GPy = "^1.9.9"
graphviz = "^0.16"
paramz = "^0.9.5"
plotly-express = "^0.4.1"
pymoo = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
