[tool.poetry]
name = "offline_imoea_framework"
version = "0.1.0"
description = ""
authors = ["am"]

[tool.poetry.dependencies]
python = "3.6.8"
statsmodels = "^0.12.2"
seaborn = "^0.11.1"
GPy = "^1.9.9"
sklearn = "^0.0"
plotly = "^4.14.3"
plotly-express = "^0.4.1"
pygmo = "^2.16.1"
pyDOE = "^0.3.8"
optproblems = "^1.3"
diversipy = "^0.8"
pymoo = "^0.4.2"
dash = "^1.20.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
